--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <title>Snake Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="./src/styles.css" />
     <script src="webxdc.js"></script>
   </head>
   <body>
     <div class="score">0</div>
     <div class="stage"></div>
-    <script type="module" src="/src/index.jsx"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
