--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="score">0</div>
     <div class="stage"></div>
+    <ul class="board"></ul>
     <script src="./src/index.js"></script>
   </body>
 </html>
