fix scoreboard look & feel

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="score">0</div>
     <div class="stage"></div>
     <ul class="board"></ul>
-    <script src="./src/index.js"></script>
+    <div class="controls"></div>
+    <script src="./src/index.js" type="module"></script>
   </body>
 </html>
