add buttons for mobile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="score">0</div>
     <div class="stage"></div>
     <ul class="board"></ul>
-    <div class="controls"></div>
+    <div class="controls">
+      <button id="left">&lt;</button>
+      <button id="right">&gt;</button>
+    </div>
     <script src="./src/index.js" type="module"></script>
   </body>
 </html>
