--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body>
     <div class="score">0</div>
     <div class="stage"></div>
-    <ul class="board"></ul>
+    <div class="boardContainer">
+      <ul class="board"></ul>
+    </div>
     <div class="controls">
       <button id="left">
         <svg
